# Civic-Pulse

./: .env  Innovation Challenge Hackathon.pptx  README.md  Test  Test.py  app.py  requirements.txt  validate_env.py  verify_refactor.py
backend/: pyproject.toml
backend/data/: ballot_questions.json  events.json  notifications.json  profiles.json  services.json  tags.json  user_forums.json
backend/src/agents/: __init__.py  educator_agent.py  ingestion_agent.py  moderation_agent.py  notifications_agent.py  orchestrator.py  rag_agent.py
backend/src/civicpulse_api/: __init__.py  dependencies.py  main.py
backend/src/civicpulse_api/clients/: __init__.py  azure_maps.py  azure_openai.py  azure_search.py  content_safety.py
backend/src/civicpulse_api/core/: config.py  context.py  logging.py
backend/src/civicpulse_api/events/: publisher.py
backend/src/civicpulse_api/models/: __init__.py  chat.py  forum.py  map.py  notifications.py  user.py
backend/src/civicpulse_api/repositories/: base.py  events_repository.py  forum_repository.py  profile_repository.py
backend/src/civicpulse_api/routers/: __init__.py  accessibility.py  chat.py  forums.py  health.py  map.py  notifications.py  profiles.py
backend/src/civicpulse_api/services/: accessibility_service.py  chat_service.py  forum_service.py  map_service.py  moderation_service.py  notifications_service.py  profile_service.py
backend/src/civicpulse_api/ws/: routes.py
config/: .env.example
data/: ballot_questions.json  events.json  index.json  ingested_data.json  notifications.json  profiles.json  services.json  (+2 more)
(+59 files in other folders)
